<resources>
    <string name="app_name">COVID-19 Stats</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="find_information">Find information about COVID-19</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="create_a_new_account">Create an Account</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="user_email">User Email</string>
    <string name="logout">Logout</string>
    <string name="home_page">Home Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="countries_stats">Countries Stats</string>
    <string name="news">News</string>
    <string name="country_s_flag">Country\'s flag</string>
    <string name="us_states_stats">US States Stats</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email_cannot_be_empty">Field for email can\'t be empty</string>
    <string name="email_not_valid">Please enter a valid email address</string>
    <string name="field_cannot_be_empty">Field can\'t be empty</string>
    <string name="password_letters">Password must include a letter</string>
    <string name="password_digits">Password must include at least one digit</string>
    <string name="password_whiteSpaces">No white spaces allowed</string>
    <string name="password_characters">Password must be at least 6 characters long</string>
    <string name="worldwide_stats">Worldwide Stats</string>
    <string name="refresh">Refresh</string>
    <string name="data_updated">Data Last Updated \n %1$s</string>
    <string name="affected_countries">Affected Countries \n %1$s</string>
    <string name="test_per_one_million">Test Per One Million \n %1$s</string>
    <string name="total_test">Total Test \n %1$s</string>
    <string name="deaths_per_one_million">Deaths Per One Million \n %1$s</string>
    <string name="cases_per_one_million">Cases Per One Million \n %1$s</string>
    <string name="new_deaths">New Deaths \n %1$s</string>
    <string name="deaths">Deaths \n %1$s</string>
    <string name="critical_cases">Critical Cases \n %1$s</string>
    <string name="active_cases">Active Cases \n %1$s</string>
    <string name="recovered">Recovered \n %1$s</string>
    <string name="new_cases">New Cases \n %1$s</string>
    <string name="total_confirmed_cases">Total Confirmed Cases \n %1$s</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="flag">Flag</string>
    <string name="country">Country </string>
    <string name="total_cases">Total Cases</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="new_cases_table">New Cases</string>
    <string name="active_cases_table">Active Cases</string>
    <string name="total_deaths_table">Total Deaths</string>
    <string name="new_deaths_table">New Deaths</string>
    <string name="critical_cases_table">Critical Cases</string>
    <string name="cases_p_1m_ppl">Cases P 1M ppl</string>
    <string name="deaths_p_1m_ppl">Deaths P 1M ppl</string>
    <string name="tested">Tested</string>
    <string name="tested_p_1m_ppl">Tested P 1M ppl</string>
    <string name="_0">0</string>
    <string name="state">State</string>
    <string name="author">Author: %1$s</string>
    <string name="published_1_s">Published: %1$s</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="cases_distribution">Cases Distribution</string>
    <string name="total">Total </string>
    <string name="info">Info</string>
    <string name="number_of_days_you_want_the_data">Number of days you want the data:</string>
    <string-array name="days">
        <item>15</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="update_failed">Update Failed</string>
    <string name="our_world_in_data">Our World In Data</string>
    <string name="setting">Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="error_message">Error Message</string>
    <string name="error_news">Search Failed, Try Again</string>
    <string name="latest_news">Latest News</string>
    <string name="news_article">News Article</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="powered_by_news_api">Powered by News API</string>
    <!--getString(R.string.welcome_message, "Test", 0);-->
</resources>
