<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_worldwidePage"
            android:icon="@drawable/ic_earth"
            android:title="@string/worldwide_stats" />
        <item
            android:id="@+id/nav_CountriesPage"
            android:icon="@drawable/ic_earth_virus"
            android:title="@string/countries_stats" />
        <item
            android:id="@+id/nav_USStatesPage"
            android:icon="@drawable/ic_usa"
            android:title="@string/us_states_stats" />
        <item
            android:id="@+id/nav_newsPage"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <item android:title="">
        <menu />
    </item>

</menu>