<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:background="@drawable/table_border"
    android:orientation="vertical"
    android:padding="5dp">


    <ImageView
        android:id="@+id/newsImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/news_article"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:scaleType="center" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="5dp"
        android:text="@string/author"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/publishedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="5dp"
        android:text="@string/published_1_s"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:text="@string/content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>