<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="fau.amoracen.covid_19update.ui.mainActivity.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_green_white"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bevan"
            android:text="@string/create_a_new_account"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/welcomeTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="@string/find_information"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="35dp">

            <EditText
                android:id="@+id/emailEditText"
                style="@style/RegistrationLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:targetApi="O" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/RegistrationLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="O" />

            <CheckBox
                android:id="@+id/showHidePasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/show_password"
                android:textSize="18sp" />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/already_a_member"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:fontFamily="@font/bevan"
                android:padding="5dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGreen"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>