<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="fau.amoracen.covid_19update.ui.mainActivity.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dark_green"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bevan"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/welcomeTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="@string/find_information"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/loginWithEmailButton"
        style="@style/WelcomeScreenButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_white_25dp"
        android:drawablePadding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="26dp"
        android:text="@string/sign_in_with_email" />

    <Button
        android:id="@+id/loginWithGoogleButton"
        style="@style/WelcomeScreenButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawablePadding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="26dp"
        android:text="@string/sign_in_with_google" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/WelcomeScreenButtonStyle"
        android:minWidth="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

    </ProgressBar>
    <!-- Other views -->
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:fontFamily="@font/bevan"
        android:padding="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGreen"
        android:textSize="25sp" />

</LinearLayout>